<resources>
    <string name="app_name">PracticalTest01Var05</string>
    <string name="navigate">Navigate to Secondary Activity</string>
    <string name="top_left">Top Left</string>
    <string name="top_right">Top Right</string>
    <string name="center">Center</string>
    <string name="bottom_left">Bottom Left</string>
    <string name="bottom_right">Bottom Right</string>
    <string name="empty"></string>
    <string name="verify">Verify</string>
    <string name="cancel">Cancel</string>
    <string name="result_ok">Result OK</string>
    <string name="result_cancel">Result Cancelled</string>
</resources>