<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.practicaltest01var05.PracticalTest01Var05MainActivity" >

    <Button
        android:id="@+id/navigate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate"
        android:layout_gravity="top|end"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3">

        <Button
            android:id="@+id/top_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_left"
            android:layout_row="0"
            android:layout_column="0"/>

        <Button
            android:id="@+id/top_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_right"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="end"/>

        <Button
            android:id="@+id/center_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center"
            android:layout_row="1"
            android:layout_column="1"/>

        <Button
            android:id="@+id/bottom_left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_left"
            android:layout_row="2"
            android:layout_column="0"/>

        <Button
            android:id="@+id/bottom_right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottom_right"
            android:layout_row="2"
            android:layout_column="2"/>

    </GridLayout>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty"/>

</LinearLayout>